<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>v2x_gw</name>
<version>1.0.0</version>
<description>ROS node to link the vehicleCAPTAIN routing core with the ROS2 environment</description>
<maintainer email="christoph.pilz@v2c2.at">Christoph Pilz</maintainer>
<author email="lukas.kuschnig@v2c2.at">Lukas Kuschnig</author>
<author email="alina.steinberger@v2c2.at">Alina Steinberger</author>
<license>BSD3-clause</license>

<buildtool_depend>ament_cmake</buildtool_depend>
<buildtool_depend>eigen3_cmake_module</buildtool_depend>

<test_depend>ament_lint_auto</test_depend>
<test_depend>ament_lint_common</test_depend>

<depend>rclcpp</depend>
<depend>std_msgs</depend>
<depend>geometry_msgs</depend>
<depend>nav_msgs</depend>
<depend>visualization_msgs</depend>
<depend>diagnostic_msgs</depend>
<depend>tf2</depend>
<depend>tf2_ros</depend>
<depend>dbw_ford_msgs</depend>
<depend>v2x_msgs</depend>

<build_depend>rosidl_default_generators</build_depend>
<build_depend>eigen</build_depend>

<exec_depend>rosidl_default_runtime</exec_depend>

<member_of_group>rosidl_interface_packages</member_of_group>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
